# jfc-travis_ci_canary

./: .gitattributes  .travis.yml  CMakeLists.txt  README.md
resources/: travis-ci-32.xcf
src/: config.cpp  icon.cpp  main.cpp  notification.cpp  request.cpp  travis-ci-32-building.cpp  travis-ci-32-error.cpp  travis-ci-32-init.cpp  travis-ci-32-no_connection.cpp  travis-ci-32-ok.cpp
src/include/jfc/: icons.h
src/include/jfc/travis_ci_canary/: config.h  delete_me.h  enums.h  icon.h  icons.h  notification.h  request.h
